styles fr search image view changed

--- a/TravelAlbum.Web/Content/nav-bar.css
+++ b/TravelAlbum.Web/Content/nav-bar.css
@@ -4,7 +4,7 @@ body {
 
 .topnav {
     position: -webkit-sticky;
-    position: fixed;
+    position: relative;
     top: 0;
     left: 0;
     width:100%;
