--- a/TravelAlbum.Web/Content/index.css
+++ b/TravelAlbum.Web/Content/index.css
@@ -1,13 +1,62 @@
-﻿#single-images-container {
+﻿.search-group {
+    display: block;
+    margin-left: 10px;
     margin-bottom: 10px;
-    z-index: -1000;
-    overflow: auto;
-    width: 80%;
-    position: absolute;
+    width: 200px
+}
+
+.label-mountain-checkbox {
+    color: white
+}
+
+.checkbox-container {
+    margin-left: 20px
+}
+
+.search-element {
+    margin-right: 10px
+}
+
+/*
+.search-container {
+    width: 20%;
     top: 100px;
-    bottom: 100px;
-    left: 20%;
-    right: 0;
+    position: fixed;
+    margin-right: 100px
+}*/
+
+
+.search-big-container {
+    width: 100%;
+    height: 60px;
+    position: fixed;
+    top: 0;
+    z-index: 10;
+}
+
+/*
+.search-pagination {
+    margin-left: auto;
+    margin-right: auto;
+    width: 15%;
+    overflow: auto;
+    display: block;
+}
+
+.centering {
+    width: 20%;
+    float: none;
+    margin: 0 auto
+}*/
+
+.paging-container {
+    position: relative;   
+}
+
+
+#single-images-container {
+    margin-bottom: 10px;
+    z-index: 1;   
 }
 
 #progress {
@@ -55,7 +104,8 @@
 
 
 .single-image-container:hover .cover-container {
-    display: inline-block;   
+    display: inline-block;
+    z-index:2
 }
 
 .cover-container:hover {
