--- a/TravelAlbum.Web/Views/Images/SearchImages.cshtml
+++ b/TravelAlbum.Web/Views/Images/SearchImages.cshtml
@@ -2,75 +2,72 @@
 @using TravelAlbum.Web.Enums
 @using TravelAlbum.Resources.App_GlobalResources
 
-<div class="search-container">
-    @using (Html.BeginForm("SearchImages", "Images", null, FormMethod.Get, new { @class = "form-horizontal", role = "form" }))
-    {
-        <div class="search-group">
-            @Html.EnumDropDownListFor(a => a.SelectedSorting, GlobalResources.SelectSortingLabel, new { @class = "form-control" })
-        </div>
 
-        <div class="search-group">
-            @Html.DropDownListFor(a => a.SelectedPageSize, Model.PageSizes, GlobalResources.ShowPhotosLabel, new { @class = "form-control" })
-        </div>
-        <div class="search-group">
-            @foreach (var g in Model.MountainsDropDown)
+<div class="row">
+    <div class="col-md-2">
+        @using (Html.BeginForm("SearchImages", "Images", null, FormMethod.Get, new { @class = "form-horizontal", role = "form" }))
+        {
+            <div class="search-group">
+                @Html.EnumDropDownListFor(a => a.SelectedSorting, GlobalResources.SelectSortingLabel, new { @class = "form-control" })
+            </div>
+
+            <div class="search-group">
+                @Html.DropDownListFor(a => a.SelectedPageSize, Model.PageSizes, GlobalResources.ShowPhotosLabel, new { @class = "form-control" })
+            </div>
+            <div class="search-group">
+                @foreach (var g in Model.MountainsDropDown)
                 {
-                @*<div class="checkbox checkbox-primary checkbox-circle">
-                        <input type="checkbox"
-                               name="MountainsIds"
-                               class="mountain-checkbox"
-                               value="@g.Value" id="@g.Value" @if (Model.MountainsIds.Contains(new Guid(g.Value))) { <text> checked</text>
-                               } />
-                        <label class="label-mountain-checkbox" for="@g.Value">@g.Text</label>
-                    </div>*@
+                    @*<div class="checkbox checkbox-primary checkbox-circle">
+                            <input type="checkbox"
+                                   name="MountainsIds"
+                                   class="mountain-checkbox"
+                                   value="@g.Value" id="@g.Value" @if (Model.MountainsIds.Contains(new Guid(g.Value))) { <text> checked</text>
+                                   } />
+                            <label class="label-mountain-checkbox" for="@g.Value">@g.Text</label>
+                        </div>*@
 
-                <div class="form-group">
-                    <!--label class="custom-control custom-checkbox label-mountain-checkbox" for="@g.Value">
-                        <input class="custom-control-input mountain-checkbox" type="checkbox" name="MountainsIds"
-                               value="@g.Value" id="@g.Value" @if (Model.MountainsIds.Contains(new Guid(g.Value))) { <text> checked</text>
-                               }>
-                        <span class="custom-control-indicator"></span>
-                        <span class="custom-control-description">@g.Text</span>                        
-                    </label-->
+                    <div class="form-group">
+                        <!--label class="custom-control custom-checkbox label-mountain-checkbox" for="@g.Value">
+                            <input class="custom-control-input mountain-checkbox" type="checkbox" name="MountainsIds"
+                                   value="@g.Value" id="@g.Value" @if (Model.MountainsIds.Contains(new Guid(g.Value))) { <text> checked</text>
+                                   }>
+                            <span class="custom-control-indicator"></span>
+                            <span class="custom-control-description">@g.Text</span>
+                        </label-->
 
-                    <div class="checkbox checkbox-container">
-                        <label class="label-mountain-checkbox" for="@g.Value">
-                            <input  class="custom-control-input" type="checkbox" name="MountainsIds"
-                               value="@g.Value" id="@g.Value" @if (Model.MountainsIds.Contains(new Guid(g.Value))) { <text> checked</text>
+                        <div class="checkbox checkbox-container">
+                            <label class="label-mountain-checkbox" for="@g.Value">
+                                <input class="custom-control-input" type="checkbox" name="MountainsIds"
+                                       value="@g.Value" id="@g.Value" @if (Model.MountainsIds.Contains(new Guid(g.Value))) { <text> checked</text>
                                }>
-                           @g.Text
-                        </label>
+                                @g.Text
+                            </label>
+                        </div>
                     </div>
-                </div>
-            }
-        </div>
-        <input class="btn btn-primary search-group submit-button" value="@GlobalResources.SearchButtonLabel" type="submit">
-    }
-</div>
-<div style="width:50px"></div>
+                }
+            </div>
+            <input class="btn btn-primary search-group submit-button" value="@GlobalResources.SearchButtonLabel" type="submit">
+        }
+    </div>
 
-
-
-
-
-<div id="single-images-container">
-    @if (Model != null && Model.ImagePreviews != null)
+    <div id="single-images-container" class="col-md-10">
+        @if (Model != null && Model.ImagePreviews != null)
             {
                 foreach (var image in Model.ImagePreviews)
                 {
-            <div class='single-image-container'>
-                <a href="@Url.Action("Details", "Images", new { id = image.ImageId })">
-                    <img class='single-image' src='data:image/jpg;base64,@image.ImageData' />
-                    <div class='cover-container'>
-                    </div>
-                </a>
-                <div class='description'> @Html.DisplayFor(a => image.CreatedOn) </div>
-            </div>
+                <div class='single-image-container'>
+                    <a href="@Url.Action("Details", "Images", new { id = image.ImageId })">
+                        <img class='single-image' src='data:image/jpg;base64,@image.ImageData' />
+                        <div class='cover-container'>
+                        </div>
+                    </a>
+                    <div class='description'> @Html.DisplayFor(a => image.CreatedOn) </div>
+                </div>
+            }
         }
-    }
 
+    </div>
 </div>
-
 @{
     string url = Request.RawUrl.ToString();
     var parts = url.Split('/').ToList();
@@ -78,8 +75,8 @@
     var extractedLastPart = lastPart[0];
 }
 <div class="paging-container">
-    <div class="centering">
-        <ul class="pagination ">
+    <div class="col-md-12 text-center">
+        <ul class="pagination">
             @{
                 string mountains = string.Empty;
                 foreach (var mountainId in Model.MountainsIds)
