--- a/TravelAlbum.Web/Views/Travels/Add.cshtml
+++ b/TravelAlbum.Web/Views/Travels/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model TravelAlbum.Web.Models.InputViewModels.CreateTravelInputModel
+﻿@model TravelAlbum.Web.Models.TravelModels.TravelInputModel
 @using TravelAlbum.Models;
 
 @using (Html.BeginForm("Add", "Travels", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
