--- a/TravelAlbum.Web/Content/index.css
+++ b/TravelAlbum.Web/Content/index.css
@@ -1,8 +1,12 @@
 ﻿.search-group {
     display: block;
     margin-left: 10px;
-    margin-bottom: 10px;
-    width: 200px
+    margin-bottom: 10px; 
+    width:100%
+}
+
+.content-container{
+    margin-right:0px
 }
 
 .label-mountain-checkbox {
@@ -26,31 +30,9 @@
 }*/
 
 
-.search-big-container {
-    width: 100%;
-    height: 60px;
-    position: fixed;
-    top: 0;
-    z-index: 10;
-}
-
-/*
-.search-pagination {
-    margin-left: auto;
-    margin-right: auto;
-    width: 15%;
-    overflow: auto;
-    display: block;
-}
-
-.centering {
-    width: 20%;
-    float: none;
-    margin: 0 auto
-}*/
-
 .paging-container {
-    position: relative;   
+    position: relative; 
+    
 }
 
 
@@ -64,26 +46,29 @@
 }
 
 .single-image {
-    width: 100%;
+    width:100%;
     height: 100%;
     display: block;   
 }
 
 .description {
-    margin-bottom:10px;
+    position: absolute;
+    top: 95%;
+    left: 0;
+    margin-bottom: 10px;
     display: block;
-    color:slategrey;
-    font:bold 15px arial;    
+    color: white;
+    font: bold 15px arial;
     word-wrap: break-word;
+    text-align: left;
 }
 
+
 .single-image-container{    
-    width:500px; 
-    height:395px;
-    float:left;
-    margin-right:50px;
-    margin-bottom:20px;
-    position:relative
+    width:500px;     
+    height:395px;         
+    position:relative;
+    margin-bottom:20px
 }
 
 .cover-container {
@@ -98,8 +83,7 @@
     height: 100%;
     background-color: white;
     opacity: 0.7;
-    border: 0px solid rgba(0,0,0,0.7);   
-   
+    border: 0px solid rgba(0,0,0,0.7);      
 }
 
 
