--- a/TravelAlbum.Web/Views/Images/Add.cshtml
+++ b/TravelAlbum.Web/Views/Images/Add.cshtml
@@ -9,14 +9,28 @@
         <h4>Title</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-               
+              
+        <div class="form-group">
+            @Html.LabelFor(model => model.bgTitle, htmlAttributes: new { @class = "control-label  col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.bgTitle, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.bgTitle, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
         <div class="form-group">
             @Html.LabelFor(model => model.bgDescription, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.TextAreaFor(model => model.bgDescription, 10, 800, htmlAttributes: new { @class = "form-control", @style = "max-width:100%" })
-
-
                 @Html.ValidationMessageFor(model => model.bgDescription, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.enTitle, htmlAttributes: new { @class = "control-label  col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.enTitle, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.enTitle, "", new { @class = "text-danger" })
             </div>
         </div>
 
