--- a/TravelAlbum.Web/Views/Images/Add.cshtml
+++ b/TravelAlbum.Web/Views/Images/Add.cshtml
@@ -51,6 +51,13 @@
         </div>
 
         <div class="form-group">
+            @Html.Label("Created on", new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <input class="form-control required" type="date" name="CreatedOn" />
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.Label("Image", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <input type="file" id="image" name="UploadedImage" />
