--- a/TravelAlbum.Web/Views/Images/Add.cshtml
+++ b/TravelAlbum.Web/Views/Images/Add.cshtml
@@ -51,21 +51,21 @@
         </div>
 
         <div class="form-group">
-            @Html.Label("Created on", new { @class = "control-label col-md-2" })
+            @Html.LabelFor(a => a.CreatedOn, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <input class="form-control required" type="date" name="CreatedOn" />
             </div>
         </div>
 
         <div class="form-group">
-            @Html.Label("Image", new { @class = "control-label col-md-2" })
+            @Html.LabelFor(a => a.UploadedImage, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <input type="file" id="image" name="UploadedImage" />
             </div>
         </div>
 
         <div class="form-group">
-            @Html.Label("Preview Image", new { @class = "control-label col-md-2" })
+            @Html.LabelFor(a => a.UploadedPreviewImage, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <input type="file" id="preview-image" name="UploadedPreviewImage" />
             </div>
@@ -73,7 +73,7 @@
         
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="@GlobalResources.CreateImageButtonLabel" class="btn btn-default" />
             </div>
         </div>
     </div>
