Adding images to selected travel functionality added

--- a/TravelAlbum.Web/Views/Travels/Add.cshtml
+++ b/TravelAlbum.Web/Views/Travels/Add.cshtml
@@ -6,11 +6,9 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Title</h4>
-        <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-       
-        <div class="form-group">           
+
+        <div class="form-group">
             @Html.LabelFor(model => model.bgTitle, htmlAttributes: new { @class = "control-label  col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.bgTitle, new { htmlAttributes = new { @class = "form-control" } })
@@ -22,9 +20,9 @@
             @Html.LabelFor(model => model.bgDescription, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.TextAreaFor(model => model.bgDescription, 10, 800, htmlAttributes: new { @class = "form-control", @style = "max-width:100%" })
-                
-               @* @Html.EditorFor(model => model.bgDescription, new { htmlAttributes = new { @class = "form-control" } })*@
-               
+
+                @* @Html.EditorFor(model => model.bgDescription, new { htmlAttributes = new { @class = "form-control" } })*@
+
                 @Html.ValidationMessageFor(model => model.bgDescription, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -41,49 +39,26 @@
         <div class="form-group">
             @Html.LabelFor(model => model.enDescription, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextAreaFor(model => model.enDescription, 10, 800, htmlAttributes : new { @class = "form-control", @style = "max-width:100%" })
+                @Html.TextAreaFor(model => model.enDescription, 10, 800, htmlAttributes: new { @class = "form-control", @style = "max-width:100%" })
                 @Html.ValidationMessageFor(model => model.enDescription, "", new { @class = "text-danger" })
             </div>
         </div>
 
-
         <div class="form-group">
-            @Html.Label(TravelAlbum.Resources.App_GlobalResources.GlobalResources.UploadedImage_1, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(a => a.StartDate, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <input type="file" id="image_1" name="UploadedImage_1" />
+                <input class="form-control required" type="date" name="StartDate" />
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.Label(TravelAlbum.Resources.App_GlobalResources.GlobalResources.UploadedImage_2, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <input type="file" id="image_2" name="UploadedImage_2" />
+        </div>        
+            <div class="form-group">
+                @Html.LabelFor(a => a.EndDate, new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    <input class="form-control required" type="date" name="EndDate" />
+                </div>
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.Label(TravelAlbum.Resources.App_GlobalResources.GlobalResources.UploadedImage_3, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <input type="file" id="image_3" name="UploadedImage_3" />
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.Label(TravelAlbum.Resources.App_GlobalResources.GlobalResources.UploadedImage_4, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <input type="file" id="image_4" name="UploadedImage_4" />
-            </div>
-        </div>
-
-
-        @Html.DropDownList("Language",
-                    new SelectList(Enum.GetValues(typeof(Language))),
-                    "Select language",
-                    new { @class = "form-control" })
-
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="@GlobalResources.CreateTravelButtonLabel" class="btn btn-default" />
             </div>
         </div>
     </div>
