--- a/TravelAlbum.Web/Views/Images/Add.cshtml
+++ b/TravelAlbum.Web/Views/Images/Add.cshtml
@@ -5,9 +5,7 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>Title</h4>
-        <hr />
+    <div class="form-horizontal">       
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
               
         <div class="form-group">
@@ -47,6 +45,14 @@
             <div class="col-md-10">
                 @Html.DropDownListFor(m => m.MountainId, Model.MountainsDropDown, new { @class = "form-control", required = "required" })
                 @Html.ValidationMessageFor(model => model.MountainsDropDown, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(m => m.TravelObjectId, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(m => m.TravelObjectId, Model.TravelsDropDown, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.TravelsDropDown, "", new { @class = "text-danger" })
             </div>
         </div>
 
