Edit travel action added and datetime boxes amended to show default values

--- a/TravelAlbum.Web/Views/Travels/Details.cshtml
+++ b/TravelAlbum.Web/Views/Travels/Details.cshtml
@@ -16,7 +16,7 @@
 
 @if (ViewContext.HttpContext.User.IsInRole("Admin"))
 {
-    @Html.ActionLink("Edit", "Edit", "Travels", new { id = Model.Id }, null);
+    @Html.ActionLink("Edit", "Edit", "Travels", new { id = Model.Id }, new { @class = "btn btn-primary" })
 }
 
 <div style="height:10px;clear:both;"></div>
