--- a/TravelAlbum.Web/Views/Travels/Edit.cshtml
+++ b/TravelAlbum.Web/Views/Travels/Edit.cshtml
@@ -46,19 +46,19 @@
 
         <div class="form-group">
             @Html.LabelFor(a => a.StartDate, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <input class="form-control required" type="date" name="StartDate" />
+            <div class="col-md-10">                
+                @Html.TextBoxFor(m => m.StartDate, "{0:yyyy-MM-dd}", new { @class = "form-control", type = "date", value = Model.StartDate })
             </div>
         </div>
         <div class="form-group">
             @Html.LabelFor(a => a.EndDate, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <input class="form-control required" type="date" name="EndDate" />
+            <div class="col-md-10">               
+                @Html.TextBoxFor(m => m.EndDate, "{0:yyyy-MM-dd}", new { @class = "form-control", type = "date", value = Model.EndDate })
             </div>
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="@GlobalResources.CreateTravelButtonLabel" class="btn btn-default" />
+                <input type="submit" value="Edit" class="btn btn-default" />
             </div>
         </div>
     </div>
