--- a/TravelAlbum.Web/Views/Travels/Details.cshtml
+++ b/TravelAlbum.Web/Views/Travels/Details.cshtml
@@ -8,10 +8,8 @@
 
 <br />
 <div style="padding:10px;background: rgba(33, 30, 30, 0.8); width:33%; margin-left:auto; margin-right:auto;text-align:justify; color:white;font-size:18px">
-    @Model.Description
+   @Html.Raw(Model.Description.Replace(Environment.NewLine, "<br/>"))    
 </div>
-<br />
-
 <br />
 
 @if (ViewContext.HttpContext.User.IsInRole("Admin"))
@@ -20,17 +18,12 @@
 }
 
 <div style="height:10px;clear:both;"></div>
-
 <textarea class="add-comment-textarea" rows="4" cols="90" placeholder="Add Comment" name="Content"></textarea>
 <button class="submit-travel-comment-button btn btn-primary" data-id="@Model.Id">Add comment</button>
 <div id="latest-comments-container" class="row">
-
 </div>
-
 <div id="comments-container" data-id="@Model.Id" data-route="/Travels/Details/"></div>
-
 <button id="show-comments-button" class="btn btn-primary">Show Comments</button>
-
 
 @section CommentsSection{
     <script src="~/Scripts/Custom/comments-controller.js"></script>
