--- a/TravelAlbum.Web/Views/Shared/_Layout.cshtml
+++ b/TravelAlbum.Web/Views/Shared/_Layout.cshtml
@@ -51,5 +51,6 @@
 
     @RenderSection("ImagesLoader", required: false)
     @RenderSection("CommentsSection", required: false)
+    @RenderSection("ImagesLoaderSection", required: false)
 </body>
 </html>
