--- a/TravelAlbum.Web/Views/Travels/Details.cshtml
+++ b/TravelAlbum.Web/Views/Travels/Details.cshtml
@@ -7,10 +7,14 @@
 </div>
 
 <br />
-<div style="padding:10px;background: rgba(33, 30, 30, 0.8); width:33%; margin-left:auto; margin-right:auto;text-align:justify; color:white;font-size:18px">
-   @Html.Raw(Model.Description.Replace(Environment.NewLine, "<br/>"))    
+<div class="row">
+    <div class="col-md-3"></div>
+    <div class="text-center col-md-6 travel-text" data-id="@Model.Id" style="padding:10px;background: rgba(33, 30, 30, 0.8); text-align:justify; color:white;font-size:18px">
+        @Html.Raw(Model.Description.Replace(Environment.NewLine, "<br/>"))
+    </div>
+    <div class="col-md-3"></div>
 </div>
-<br />
+<div id="single-images-container" class="gallery"></div>
 
 @if (ViewContext.HttpContext.User.IsInRole("Admin"))
 {
@@ -27,4 +31,8 @@
 
 @section CommentsSection{
     <script src="~/Scripts/Custom/comments-controller.js"></script>
+}
+
+@section ImagesLoaderSection{
+    <script src="~/Scripts/Custom/images-loader-section.js"></script>
 }
