Background images changed according to the view which is opened, new BackgroundData propety added to images, travel and account output models to be used for passing the backgrund image data to the view, styles f the image detals page amended, method for getting file in utils added in order the File.IO to be mocked, new DB content images added

--- a/TravelAlbum.Web/Content/Site.css
+++ b/TravelAlbum.Web/Content/Site.css
@@ -1,18 +1,36 @@
-﻿body {     
-    padding-bottom: 20px;
+﻿body {
+    padding: 0; /* remove any pre-existing padding, just in case */
+    min-width: 100%;
+    min-height: 100%;
 }
 
-#bg {
+#bg {    
     position: fixed;
     top: 0;
     left: 0;
     /* Preserve aspet ratio */
     min-width: 100%;
     min-height: 100%;
-    -webkit-filter: sepia(0.55) blur(3px);
-    filter: sepia(0.55) blur(3px); 
-    z-index:-1000;
+    width:100%;
+    height:100%;   
+    z-index: -1000;
 }
+
+#bg-log-in {
+    position: fixed;
+    top: 0;
+    left: 0;
+    /* Preserve aspet ratio */
+    min-width: 99%;
+    min-height: 99%;
+    width: 99%;
+    height: 99%;
+    z-index: -1000;
+    -webkit-filter: sepia(0.55) blur(3px);
+    filter: sepia(0.55) blur(3px);
+}
+
+
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
