--- a/TravelAlbum.Web/Content/single-image-details.css
+++ b/TravelAlbum.Web/Content/single-image-details.css
@@ -7,11 +7,42 @@
 }
 
 .single-image-img {
-    width: 33%;
-    height: 33%;
+    width: 45%;
+    height: 45%;
     display: block;
+    min-width:250px;
     margin-left:auto;
     margin-right:auto;
     margin-top:1%;
     margin-bottom:1%
+}
+
+.description-details-image {
+    margin-bottom: 10px;
+    display: block;
+    color: white;
+    font: bold 15px arial;
+    word-wrap: break-word;
+    text-align: left;
+}
+
+.date-details-image { 
+    margin-bottom: 10px;
+    display: block;
+    color: white;
+    font: bold 15px arial;
+    word-wrap: break-word;
+    text-align: left;
+}
+
+#bg-single-image-details {
+    position: fixed;
+    top: 0;
+    left: 0;
+    /* Preserve aspet ratio */
+    min-width: 100%;
+    min-height: 100%;
+    width: 100%;
+    height: 100%;   
+    z-index: -1000;
 }
