--- a/TravelAlbum.Web/Content/travels.css
+++ b/TravelAlbum.Web/Content/travels.css
@@ -1,4 +1,21 @@
-﻿.clearfix:after {
+﻿#bg-travels {
+    position: fixed;
+    top: 0;
+    left: 0;
+    /* Preserve aspet ratio */
+    min-width: 100%;
+    min-height: 100%;
+    width: 100%;
+    height: 100%;
+    z-index: -1000;
+}
+
+.travel-details-title {
+    font-size: 24px;
+    color: black;
+}
+
+.clearfix:after {
     content: ".";
     visibility: hidden;
     display: block;
@@ -77,5 +94,22 @@
     background: rgba(33, 30, 30, 0.8);
     text-align: justify;
     color: white;
-    font-size: 20px
+    font-size: 20px;  
 }
+
+.single-image-container-in-travel {
+    width: 50%;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto
+}
+
+    .single-image-container-in-travel:hover .cover-container-left {
+        display: inline-block;
+        z-index: 2;
+    }
+
+    .single-image-container-in-travel:hover .cover-container-right {
+        display: inline-block;
+        z-index: 2;
+    }
