--- a/TravelAlbum.Web/Views/Account/Login.cshtml
+++ b/TravelAlbum.Web/Views/Account/Login.cshtml
@@ -4,6 +4,8 @@
     ViewBag.Title = "Log in";
 }
 
+<img src="@String.Format("data:image/jpg;base64,{0}", @Model.BackgroundData)" id="bg-log-in" />
+
 <h2>@ViewBag.Title.</h2>
 <div class="row">
     <div class="col-md-8">
