--- a/TravelAlbum.Web/Views/Images/SearchImages.cshtml
+++ b/TravelAlbum.Web/Views/Images/SearchImages.cshtml
@@ -2,9 +2,10 @@
 @using TravelAlbum.Web.Enums
 @using TravelAlbum.Resources.App_GlobalResources
 
+<img src="@String.Format("data:image/jpg;base64,{0}", @Model.BackgroundData)"  id="bg" />
 
 <div class="row content-container">
-    <div class="col-md-3">
+    <div class="col-md-2">
         @using (Html.BeginForm("SearchImages", "Images", null, FormMethod.Get, new { @class = "form-horizontal", role = "form" }))
         {
             <div class="search-group">
@@ -32,7 +33,7 @@
             <input class="btn btn-primary search-group submit-button" value="@GlobalResources.SearchButtonLabel" type="submit">
         }
     </div>
-    <div id="single-images-container" class="col-md-9 text-center">
+    <div id="single-images-container" class="col-md-10 text-center">
 
         @if (Model != null && Model.ImagePreviews != null)
             {
@@ -40,10 +41,10 @@
                 {
                 <div class="row">
                     <div class="col-md-2"></div>
-                    <div class='col-md-6'>
-                        <div class="single-image-container">
+                    <div class='col-md-8'>
+                        <div class="single-image-container  text-center">
                             <img class='single-image' src='data:image/jpg;base64,@image.ImageData' />
-                            <a href="@String.Format("data:image/jpg;base64,{0}", @image.ImageData)" data-lightbox="image-1" data-width="1024" data-height="768">
+                            <a href="@String.Format("data:image/jpg;base64,{0}", @image.ImageData)" id="single_image">
                                 <div class='cover-container-left'>
                                 </div>
                             </a>
@@ -55,7 +56,7 @@
                             <div>@image.Title</div>
                         </div>
                     </div>
-                    <div class="col-md-4"></div>
+                    <div class="col-md-2"></div>
                 </div>
             }
         }
@@ -69,7 +70,7 @@
     var extractedLastPart = lastPart[0];
 }
 <div class="paging-container">
-    <div class="col-md-12 text-center">
+    <div class="col-sm-offset-2 col-md-10 text-center">
         <ul class="pagination">
             @{
                 string mountains = string.Empty;
@@ -115,13 +116,11 @@
     @Scripts.Render("~/bundles/jqueryval")
 }
 
-<script>
-    lightbox.option({
-      'resizeDuration': 1000,
-      'wrapAround': true,
-      'fitImagesInViewport': true,
-      'maxWidth': 1024,
-      'maxheight': 768
-    })
-</script>
+
+@section BackgroundSection{
+    <script>
+      
+    </script>
+}
+
 
