--- a/TravelAlbum.Web/Views/Shared/_Layout.cshtml
+++ b/TravelAlbum.Web/Views/Shared/_Layout.cshtml
@@ -5,19 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Travel Album</title>
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")   
+    @Scripts.Render("~/bundles/modernizr")
+    <link href="~/Content/jquery.fancybox.css" rel="stylesheet" />
     <link href="~/Content/nav-bar.css" rel="stylesheet" />
     <link href="~/Content/top-image.css" rel="stylesheet" />
-    <link href="~/Content/lightbox.css" rel="stylesheet" />
     <link href="~/Content/index.css" rel="stylesheet" />
     <link href="~/Content/single-image-details.css" rel="stylesheet" />
     <link href="~/Content/comments.css" rel="stylesheet" />
     <link href="~/Content/travels.css" rel="stylesheet" />
 </head>
 <body>
-
-    <img src="~/Content/DBImages/SL373233_preview.jpg" id="bg" />
-    <!--div class="top-image"></!div-->
+   
+      
+    @*<img src="~/Content/DBImages/SL373554_preview.jpg" id="bg" class="image-details-background"/>*@
+    
     <div class='topnav'>
         <div class="content-menu">
             @Html.ActionLink(TravelAlbum.Resources.App_GlobalResources.GlobalResources.LabelAlbum, "SearchImages", "Images")
@@ -46,11 +47,12 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
-    <script src="~/Scripts/lightbox.js"></script>
-    <script src="~/Scripts/jquery.endless-scroll.js"></script>    
-
+    <script src="~/Scripts/jquery.endless-scroll.js"></script>        
+    <script src="~/Scripts/jquery.fancybox.min.js"></script>
     @RenderSection("ImagesLoader", required: false)
     @RenderSection("CommentsSection", required: false)
     @RenderSection("ImagesLoaderSection", required: false)
+    @RenderSection("BackgroundSection", required: false)
+    <script src="~/Scripts/Custom/fancybox-options.js"></script>
 </body>
 </html>
