--- a/TravelAlbum.Web/Views/Shared/_Layout.cshtml
+++ b/TravelAlbum.Web/Views/Shared/_Layout.cshtml
@@ -15,6 +15,13 @@
     <link href="~/Content/travels.css" rel="stylesheet" />
 </head>
 <body>
+    
+    <!--fb:login-button scope="public_profile,email"
+                     onlogin="checkLoginState();">
+    </!--fb:login-button>
+    <script src="~/Scripts/facebook-auth.js"></script-->
+  
+ 
    
       
     @*<img src="~/Content/DBImages/SL373554_preview.jpg" id="bg" class="image-details-background"/>*@
