--- a/TravelAlbum.Web/Views/Account/Login.cshtml
+++ b/TravelAlbum.Web/Views/Account/Login.cshtml
@@ -1,12 +1,12 @@
 ﻿@using TravelAlbum.Web.Models
 @model LoginViewModel
 @{
-    ViewBag.Title = "Log in";
+    ViewBag.Title = @TravelAlbum.Resources.App_GlobalResources.GlobalResources.LoginLabel;
 }
 
 <img src="@String.Format("data:image/jpg;base64,{0}", @Model.BackgroundData)" id="bg-log-in" />
 
-<h2>@ViewBag.Title.</h2>
+
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
@@ -40,11 +40,11 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-default" />
+                        <input type="submit" value="@TravelAlbum.Resources.App_GlobalResources.GlobalResources.LoginLabel";" class="btn btn-default" />
                     </div>
                 </div>
                 <p>
-                    @Html.ActionLink("Register as a new user", "Register")
+                    @Html.ActionLink(TravelAlbum.Resources.App_GlobalResources.GlobalResources.RegisterAsANewUserLabel, "Register")
                 </p>
                 @* Enable this once you have account confirmation enabled for password reset functionality
                     <p>
