--- a/TravelAlbum.Web/Views/Shared/_LoginPartial.cshtml
+++ b/TravelAlbum.Web/Views/Shared/_LoginPartial.cshtml
@@ -15,8 +15,8 @@
 }
 else
 {
-    @Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })
-    @Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+    @Html.ActionLink(TravelAlbum.Resources.App_GlobalResources.GlobalResources.RegisterLabel, "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })
+    @Html.ActionLink(TravelAlbum.Resources.App_GlobalResources.GlobalResources.LoginLabel, "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
     @*<ul class="nav navbar-nav navbar-right">
         <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
         <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
